--- a/themes/miho/source/css/style.styl
+++ b/themes/miho/source/css/style.styl
@@ -5,6 +5,10 @@
 
 global-reset()
 
+a
+  cursor: url("/鼠标.ico"),auto!important
+body
+  cursor: url("/bird.ico"),auto!important
 input, button
   margin: 0
   padding: 0
